--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -23,6 +23,9 @@
         <mat-icon>keyboard_arrow_left</mat-icon>
       </button>
 
+      <button (click)="moveForward()" [class.menu-right-icon]="!wideView" [class.menu-right-icon-wide]="wideView &&  !createPostIt"   [class.menu-right-icon-wide-post]="wideView &&  createPostIt"  disableRipple mat-icon-button color="red">
+        <mat-icon>keyboard_arrow_right</mat-icon>
+      </button>
       <!-- COMMENTS BOX -->
       <div class="comment-to-top" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle fxLayout="col"
         *ngIf="isCommentBox" fxLayoutAlign="center center">
@@ -119,7 +122,7 @@
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">note_add</mat-icon>
         </button>
-        <button *ngIf="!createPostIt" (click)="wideScreenView()" mat-icon-button matTooltip="Wide screen" matTooltipPosition="above"
+        <button  (click)="wideScreenView()" mat-icon-button matTooltip="Wide screen" matTooltipPosition="above"
           mat-icon-button color="warn" aria-label="aria"> <svg class="full-icon" style="height: 20px" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <path
@@ -265,27 +268,7 @@
             <div class="col-md-12">
 
               <!-- Brandstorm and Names toolbar -->
-              <mat-toolbar class="toptoolbar mat-elevation-z12" color="primary">
-                <div class="row">
-                  <div (click)="theme()" class="col brandstorm"
-                    style="color: white; font-size: 40px;font-family: Arial">
-                    Brainstorm
-                  </div>
-                  <div class="col" (click)="toggleNamebox()"
-                    style="color: white; font-size: 30px;font-family: Arial; right: -370px;cursor: pointer;"
-                    [matTooltip]="'Names Created '+ nameCandidates.length" matTooltipPosition="right">
-                    Names
-                    <span *ngIf="nameCandidates.length > 0" style="position: absolute;    top: 6px;
-                      right: 4px;" matBadgeColor="warn" [matBadgeHidden]="!(nameCandidates.length > 0)"
-                      [matBadge]="nameCandidates.length" matBadgeSize="medium"></span>
-                  </div>
-                  <button class="screen-button" mat-raised-button *ngIf="isScreenButton&&isNSR" (click)="screenNames()">
-                    <!-- <mat-icon>folder_special</mat-icon> -->
-                    screen
-                  </button>
-
-                </div>
-              </mat-toolbar>
+         
             </div>
           </div>
 
@@ -296,11 +279,31 @@
               <div class="row">
                 <div class="col-md-8">
 
-                  <div class="presentation-box " style="overflow-y: scroll;">
-
+                  <div class="presentation-box " [class.presentation-box-wide]="wideView" [class.presentation-box]="!wideView" style="overflow-y: scroll;">
+                    <mat-toolbar [class.toptoolbar-wide]="wideView" [class.toptoolbar]="!wideView" class=" mat-elevation-z12" color="primary"  >
+                      <div class="row">
+                        <div (click)="theme()" class="col brandstorm"
+                          style="color: white; font-size: 40px;font-family: Arial">
+                          Brainstorm
+                        </div>
+                        <div class="col" (click)="toggleNamebox()"
+                          style="color: white; font-size: 30px;font-family: Arial; right: -370px;cursor: pointer;"
+                          [matTooltip]="'Names Created '+ nameCandidates.length" matTooltipPosition="right">
+                          Names
+                          <span *ngIf="nameCandidates.length > 0" style="position: absolute;    top: 6px;
+                            right: 4px;" matBadgeColor="warn" [matBadgeHidden]="!(nameCandidates.length > 0)"
+                            [matBadge]="nameCandidates.length" matBadgeSize="medium"></span>
+                        </div>
+                        <button class="screen-button" mat-raised-button *ngIf="isScreenButton&&isNSR" (click)="screenNames()">
+                          <!-- <mat-icon>folder_special</mat-icon> -->
+                          screen
+                        </button>
+      
+                      </div>
+                    </mat-toolbar>
                     <!-- POST_REPEATER -->
 
-                    <div class="row post-it-container " [ngStyle]="{'max-width': myMaxWith }" dragula="TASKS"
+                    <div class="row post-it-container " [ngStyle]="{'max-width': !wideView ? myMaxWith : '1080px'}" dragula="TASKS"
                       [dragulaModel]="conceptData.concepts" (dragulaModelChange)="conceptData.concepts = $event">
                       <div [ngClass]="postItListTheme" *ngFor="let item of conceptData.concepts; let i = index;">
 
@@ -345,7 +348,7 @@
                 <div class="col-md-4" *ngIf="nameBox && nameBoxB">
                   <!-- NAMES  nameCandidates BOX -->
                   <!-- <button mat-button class="screen-button">screen</button> -->
-                  <div class="names-container bounceOut mat-elevation-z2" [ngStyle]="{'max-width': myMaxRWith  }">
+                  <div [class.names-container-wide]="wideView" [class.names-container]="!wideView" class=" bounceOut mat-elevation-z2" [ngStyle]="{'max-width': myMaxRWith  }">
                     <div *ngFor="let  nameCandidate of nameCandidates; let i = index">
                       <span *ngIf="!isScreeningNames" (dblclick)="openDialog(nameCandidate, 'deleteName')"
                         style="font-size:22px;margin: 10px;cursor: pointer;overflow: scroll;"
@@ -361,7 +364,7 @@
                     </div>
                   </div>
 
-                  <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form mat-elevation-z4"
+                  <form name="loginForm" [formGroup]="loginForm" novalidate  [class.name-form-wide]="wideView" [class.name-form]="!wideView" class=" mat-elevation-z4"
                     fxLayoutAlign="center center">
 
                     <mat-form-field appearance="outline">
@@ -499,9 +502,6 @@
 
     </div>
 
-    <button (click)="moveForward()" [class.menu-right-icon]="!wideView" [class.menu-right-icon-wide]="wideView"  disableRipple mat-icon-button color="red">
-      <mat-icon>keyboard_arrow_right</mat-icon>
-    </button>
 
 
   </mat-sidenav-content>
