--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -28,9 +28,9 @@
                     <mat-form-field appearance="outline">
                         <mat-label>Enter Project Name</mat-label>
                         <input type="text" matInput formControlName="bmxProjectName">
-                        <p *ngIf="bmxProjectName.invalid && bmxProjectName.dirty">Project Name is required only A-Z,
+                        <!-- <p *ngIf="bmxProjectName.invalid && bmxProjectName.dirty">Project Name is required only A-Z,
                             a-z,
-                            0-9 allowed</p>
+                            0-9 allowed</p> -->
                     </mat-form-field>
 
 
