--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -28,9 +28,9 @@
                     <mat-form-field appearance="outline">
                         <mat-label>Enter Project Name</mat-label>
                         <input type="text" matInput formControlName="bmxProjectName">
-                        <p *ngIf="bmxProjectName.invalid && bmxProjectName.dirty">Project Name is required only A-Z,
+                        <!-- <p *ngIf="bmxProjectName.invalid && bmxProjectName.dirty">Project Name is required only A-Z,
                             a-z,
-                            0-9 allowed</p>
+                            0-9 allowed</p> -->
                     </mat-form-field>
 
 
@@ -48,14 +48,13 @@
                 </div>
                 <div class="row-field">
                     <label class="selectLabels">Closing date: </label>
-
-                        <mat-form-field appearance="outline" id="project-datepicker" style="width:55%">
-                            <input matInput [matDatepicker]="picker" placeholder="Choose a date"
-                                (dateChange)="onSelect($event.value)">
-                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                            <mat-datepicker #picker></mat-datepicker>
-                        </mat-form-field>
-                </div>
+                    <mat-form-field appearance="outline" id="project-datepicker" style="width: 55%">
+                      <input matInput [matDatepicker]="picker" placeholder="Choose a date" (dateChange)="onSelect($event.value)"
+                        [min]="getCurrentDate()">
+                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                  </div>
             </div>
             <div>
                 <div class="row-field">
